syntax = "proto3";

package examplepb.v1;

option go_package = "github.com/mikalai-mitsin/example/pkg/examplepb/v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/api/annotations.proto";

message TagCreate {
  string post_id = 1;
  string value = 2;
}

message TagGet {
  string id = 1;
}

message TagUpdate {
  string id = 1;
  google.protobuf.StringValue post_id = 2;
  google.protobuf.StringValue value = 3;
}

message Tag {
  string id = 1;
  google.protobuf.Timestamp updated_at = 2;
  google.protobuf.Timestamp created_at = 3;
  string post_id = 4;
  string value = 5;
}

message ListTag {
  repeated Tag items = 1;
  uint64 count = 2;
}

message TagDelete {
  string id = 1;
}

message TagFilter {
  google.protobuf.UInt64Value page_number = 1;
  google.protobuf.UInt64Value page_size = 2;
  repeated string order_by = 3;
  repeated string ids = 4;
}

service TagService {
  rpc Create(examplepb.v1.TagCreate) returns (examplepb.v1.Tag) {
    option (google.api.http) = {
      post: "/api/v1/tags"
      body: "*"
    };
  }
  rpc Get(examplepb.v1.TagGet) returns (examplepb.v1.Tag) {
    option (google.api.http) = {get: "/api/v1/tags/{id}"};
  }
  rpc Update(examplepb.v1.TagUpdate) returns (examplepb.v1.Tag) {
    option (google.api.http) = {
      patch: "/api/v1/tags/{id}"
      body: "*"
    };
  }
  rpc Delete(examplepb.v1.TagDelete) returns (google.protobuf.Empty) {
    option (google.api.http) = {delete: "/api/v1/tags/{id}"};
  }
  rpc List(examplepb.v1.TagFilter) returns (examplepb.v1.ListTag) {
    option (google.api.http) = {get: "/api/v1/tags"};
  }
}